@@ -42,7 +42,8 @@
 #endif
 
 /* This is for Visual Studio, so this header works as distributed in the binary downloads */
-#if defined(_MSC_VER)
+#if defined(_MSC_VER) && !defined(MPG123_DEF_SSIZE_T)
+#define MPG123_DEF_SSIZE_T
 #include <stddef.h>
 typedef ptrdiff_t ssize_t;
 #endif
